# bookingsync

./: .gitignore  folders.py  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  settings.yaml  tsconfig.json
backend/: package.json  pnpm-lock.yaml
prisma/: data.json  dev.db  dev.db-journal  schema.prisma  seed.ts
prisma/migrations/20220129095258_init/: migration.sql
prisma/migrations/20220129131613_phone_no_changed_to_phone/: migration.sql
prisma/migrations/20220130130725_camel_case_to_snake_case_to_match_simplybook_api/: migration.sql
prisma/migrations/20220130131039_code_string_int/: migration.sql
prisma/migrations/20220131101310_init/: migration.sql
prisma/migrations/20220204150311_init/: migration.sql
prisma/migrations/20220211025012_init/: migration.sql
simplysync/: asgi.py  settings.py  urls.py  wsgi.py
simplysync/app/: views.py
src/: config.ts  config.ts.example  context.ts  middleware.ts  notification.ts  prisma.ts  server.ts  simplybook-rpc.ts  simplybook.ts  test.ts
src/nexus-old/: schema.ts
src/schema/: index.ts  permissions.ts
